deployment.yaml
```
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hrms-core-deployment
  namespace: devops-tools
  labels:
    app: hrms-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hrms-core
  template:
    metadata:
      labels:
        app: hrms-core
    spec:
      containers:
      - name: hrms-core
        image: rohit055428181/message-creation:latest
        ports:
        - containerPort: 6011  # Adjust the port based on your Node.js application
```
