service.yaml
```
apiVersion: v1
kind: Service
metadata:
  name: hrms-core-service
  namespace: devops-tools
spec:
  selector:
    app: hrms-core
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000  # Adjust to match your Node.js application's port
  type: ClusterIP

```
