ingress.yaml
```
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hrms-core-service
  namespace: devops-tools
spec:
  ingressClassName: nginx
  rules:
  - host: api-staging.floes.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hrms-core-service
            port:
              number: 80
```
